Added gap demonstration for flexbox

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -413,6 +413,55 @@
         </article>
       </div>
     </section>
+    <section class="main__section section">
+      <div class="section__wrapper">
+        <h2 class="section__heading" id="nesting">Экспериментальные решения</h2>
+
+        <article class="section__article article">
+          <h3 class="article__heading">Gap</h3>
+          <ul class="article__list article__list--gap">
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=1" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=2" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=3" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=4" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=5" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=6" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=1" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=2" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=3" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=4" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=5" alt="lorem lorem lorem lorem">
+            </li>
+            <li class="article__item">
+              <img src="https://picsum.photos/200?random=6" alt="lorem lorem lorem lorem">
+            </li>
+          </ul>
+
+          <p class="article__comment article__comment--experimental">Работает только в Chrome и Firefox, а также в Safari Technical Preview</p>
+        </article>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
