small spelling fix

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -418,7 +418,7 @@
         <h2 class="section__heading" id="nesting">Экспериментальные решения</h2>
 
         <article class="section__article article">
-          <h3 class="article__heading">Gap</h3>
+          <h3 class="article__heading">gap</h3>
           <ul class="article__list article__list--gap">
             <li class="article__item">
               <img src="https://picsum.photos/200?random=1" alt="lorem lorem lorem lorem">
